--- a/ProjektHCMSeite/Herren2/herren2.html
+++ b/ProjektHCMSeite/Herren2/herren2.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../hauptSeite/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="herren2.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,19 +16,44 @@
 </head>
 
 <body>
+    <div class="headMain">
+        <div class="hcmLogo">
+            <a href="../hauptSeite/index.htm"><img src="../picture/HCM_Logo_blau_2019.png"
+                alt="Dises HCM Logo dient dazu auf die Hauptseite zu springen"></a>
+        </div>
+        <div class="headContainer">
+            <Header class="placehcmLogo">
+
+            </Header>
+            <Header class="titlehcm">
+                <h1 class="titelHCM">HC Malters</h1>
+                <a href="https://arena.asport.tv/club/4234/hc-malters"><img
+                        src="../picture/Screenshot 2022-09-23 at 13.03.21.png" alt="Button zum TV" class="TVButton"></a>
+            </Header>
+            <nav class="mainNav">
+                <a href="../Herren1/herren1.html"><button class="sideBarButton">Teams</button></a>
+                <a href="../Herren1/herren1.html"><button class="sideBarButton">Mitglied werden</button></a>
+                <a href="../Herren1/herren1.html"><button class="sideBarButton">Portrait</button></a>
+
+            </nav>
+        </div>
+    </div>
     <div class="container">
-        <nav>weitere Mannschaften:
-            <p>
-                <a class="herren1" href="../Herren1/herren1.html">Herren 1</a> <br />
-                    <br />
-                <a class="damen1" href="../Damen1/damen1.html">Damen 1</a> <br />
-                    <br />
-                <a class="damen2" href="../Damen2/damen2.html">Damen 2</a> <br />
-                    <br />
-                <a class="juniorenu17" href="../JuniorenU17/juniorenu17.html">Junioren U17</a> <br />
-                    <br />
-                <a class="juniorenu15" href="../JuniorenU15/juniorenu15.html">Junioren U15</a> <br />
-            </p>
+        <nav class="navSideTitle" >
+            <h3 class="titleweiterManschaften">weitere Mannschaften:</h3> <br>
+            <div class="navSide">
+                <a class="herren1" href="../Herren1/herren1.html"><button class="sideBarButton side">Herren 1</button></a> <br />
+                <br />
+                <a class="herren2" href="../Herren2/herren2.html"><button class="sideBarButton side">Herren 2</button></a> <br />
+                <br />
+                <a class="damen2" href="../Damen2/damen2.html"><button class="sideBarButton side">Damen 2</button></a> <br />
+                <br />
+                <a class="damen1" href="../Damen1/damen1.html"><button class="sideBarButton side">Damen 1</button></a> <br />
+                <br />
+                <a class="juniorenu17" href="../JuniorenU17/juniorenu17.html"><button class="sideBarButton side">Junioren U17</button></a> <br />
+                <br />
+                <a class="juniorenu15" href="../JuniorenU15/juniorenu15.html"><button class="sideBarButton side">Junioren U15</button></a> <br />
+            </div>
         </nav>
         <div class="containerMain">
             <header>
@@ -90,5 +117,20 @@
             </footer>
         </div>
     </div>
+    <footer>
+        <div class="containerFooter">
+            <h3 class="h3Sponsoren">Unsere Sponsoren</h3>
+            <h3>Unser TV</h3>
+            <h3>Unsere Social Medias</h3>
+            <a href="https://gimalur.ch/"><img src="../picture/Gimalur.png" alt="Button zum Sponsor gimalur" class="GimalurButton"></a>
+            <a href="https://josefkoch.ch/"><img src="../picture/JosefKoch.png" alt="Button zum Sponsor Josef Koch" class="josefKochclass"></a>
+            <a href="https://arena.asport.tv/club/4234/hc-malters"><img src="../picture/Screenshot 2022-09-23 at 13.03.21.png" alt="Button zum TV" class="TVButtonBottom"></a>
+            <div>
+                <a href="https://www.instagram.com/hcmalters/?hl=de" class="fa fa-instagram"></a>
+                <a href="https://www.youtube.com/channel/UCrx8Rqo6ZttuCVSozsCWORA" class="fa fa-youtube"></a>
+                <a href="https://www.facebook.com/hcmalters/" class="fa fa-facebook"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
