--- a/ProjektHCMSeite/hauptSeite/index.htm
+++ b/ProjektHCMSeite/hauptSeite/index.htm
@@ -6,14 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" async></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="script.js" async></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;1,500&family=Nabla&display=swap"
+        rel="stylesheet">
     <title>HCM-Home</title>
 </head>
 
 <body>
     <div class="hcmLogo">
-        <a href="../hauptSeite/hauptSeite"><img src="../picture/HCM_Logo_blau_2019.png"alt="Dises HCM Logo dient dazu auf die Hauptseite zu springen"></a>
+        <a href="../hauptSeite/index.htm"><img src="../picture/HCM_Logo_blau_2019.png"
+            alt="Dises HCM Logo dient dazu auf die Hauptseite zu springen"></a>
     </div>
     <div class="bodyContainer">
         <Header class="placehcmLogo">
@@ -23,12 +28,13 @@
             <h1 class="titelHCM">HC Malters</h1>
             <a href="https://arena.asport.tv/club/4234/hc-malters"><img src="../picture/Screenshot 2022-09-23 at 13.03.21.png" alt="Button zum TV" class="TVButton"></a>
         </Header>
-        <nav>
-            <button class="sideBarButton"><a href="">Teams</a></button>
-            <button class="sideBarButton"><a href="">Mitglied werden</a></button>
-            <button class="sideBarButton"><a href="">Portrait</a></button>
+        <nav class="mainNav">
+            <a href="../Herren1/herren1.html"><button class="sideBarButton">Teams</button></a> 
+            <a href="../Herren1/herren1.html"><button class="sideBarButton">Mitglied werden</button></a> 
+            <a href="../Herren1/herren1.html"><button class="sideBarButton">Portrait</button></a> 
+
         </nav>
-        <main>
+        <main class="mainMain">
             <div class="w3-content w3-section">
                 <img class="mySlides image1" src="../picture/Damen.jpg" style="width: 80%;">
                 <img class="mySlides image2" src="../picture/images1.jpg" style="width: 80%;">
