--- a/ProjektHCMSeite/Damen2/damen2.html
+++ b/ProjektHCMSeite/Damen2/damen2.html
@@ -57,18 +57,11 @@
         </nav>
         <div class="containerMain">
             <header>
-                <div class="socials">
-                    <a href="https://www.instagram.com/hcmalters/">
-                        <img src="Download.png" alt="Instagram Link zu HC Malters"> </a>
-
-                    <a href="https://www.facebook.com/hcmalters/">
-                        <img src="facebook--v1.png" alt="Link zum Facebook des HC Malters">
-                    </a>
-                </div>
+                <h1>Damen 2 (SG Malters/Emmen)</h1>
 
             </header>
             <main>
-                <h1>Damen 2 (SG Malters/Emmen)</h1>
+                
                 <h3>2. Liga</h2>
 
                     <img src="https://www.hc-malters.ch/images/teams/2022/D2.jpg"
@@ -114,7 +107,7 @@
     </div>
     <footer>
         <div class="containerFooter">
-            <h3 class="h3Sponsoren">Unsere Sponsoren</h3>
+            <h3 class="h3Sponsoren">Unsere Hauptsponsoren</h3>
             <h3>Unser TV</h3>
             <h3>Unsere Social Medias</h3>
             <a href="https://gimalur.ch/"><img src="../picture/Gimalur.png" alt="Button zum Sponsor gimalur" class="GimalurButton"></a>
