--- a/ProjektHCMSeite/JuniorenU15/juniorenu15.html
+++ b/ProjektHCMSeite/JuniorenU15/juniorenu15.html
@@ -56,17 +56,10 @@
         </nav>
         <div class="containerMain">
             <header>
-                <div class="socials">
-                    <a href="https://www.instagram.com/hcmalters/">
-                        <img src="insta.png" alt="Instagram Link zu HC Malters"> </a>
-
-                    <a href="https://www.facebook.com/hcmalters/">
-                        <img src="facebook--v1.png" alt="Link zum Facebook des HC Malters">
-                    </a>
-                </div>
+                <h1>Junioren U15</h1>
             </header>
             <main>
-                <h1>Junioren U15</h1>
+                
                 <h3>Stärkeklasse 2</h2>
 
                     <img src="https://www.hc-malters.ch/images/teams/2022/U15.jpg" alt="Bild von Mannschaft der Junioren U15">
@@ -116,7 +109,7 @@
     </div>
     <footer>
         <div class="containerFooter">
-            <h3 class="h3Sponsoren">Unsere Sponsoren</h3>
+            <h3 class="h3Sponsoren">Unsere Hauptsponsoren</h3>
             <h3>Unser TV</h3>
             <h3>Unsere Social Medias</h3>
             <a href="https://gimalur.ch/"><img src="../picture/Gimalur.png" alt="Button zum Sponsor gimalur" class="GimalurButton"></a>
