--- a/ProjektHCMSeite/hauptSeite/index.htm
+++ b/ProjektHCMSeite/hauptSeite/index.htm
@@ -36,10 +36,10 @@
         </nav>
         <main class="mainMain">
             <div class="w3-content w3-section">
-                <img class="mySlides image1" src="../picture/Damen.jpg" style="width: 80%;">
-                <img class="mySlides image2" src="../picture/images1.jpg" style="width: 80%;">
-                <img class="mySlides image3" src="../picture/images.jpg" style="width: 80%;">
-                <img class="mySlides image4" src="../picture/index1.jpg" style="width: 80%;">
+                <img class="mySlides image1" src="../picture/Damen.jpg" style="height: 800px; max-width: 80%;">
+                <img class="mySlides image2" src="../picture/images1.jpg" style="height: 800px; max-width: 80%;">
+                <img class="mySlides image3" src="../picture/images.jpg" style="height: 800px; max-width: 80%;">
+                <img class="mySlides image4" src="../picture/index1.jpg" style="height: 800px; max-width: 80%;">
             </div>
         </main>
         <article>
@@ -142,13 +142,13 @@
                             Herren1
                         </td>
                         <td>
-                            <a href="https://arena.asport.tv/event/16879/hc-malters-tv-zofingen">video</a>
+                            <a href="https://arena.asport.tv/event/16879/hc-malters-tv-zofingen"><button class="videoButton">video</button></a> 
                         </td>
                     </tr>
                 </Table>
             </div>
             <div class="letzteResultate">
-                <h2>Aktuelle Spiele</h2>
+                <h2>Letzte Spiele</h2>
                 <Table>
                     <tr>
                         <th>
@@ -191,7 +191,7 @@
                 </Table>
             </div>
             <div class="nachsteSpiele">
-                <h2>nächste Spiele</h2>
+                <h2>Nächste Spiele</h2>
                 <Table>
                     <tr>
                         <th>
@@ -241,7 +241,7 @@
         </aside>
         <footer>
             <div class="containerFooter">
-                <h3 class="h3Sponsoren">Unsere Sponsoren</h3>
+                <h3 class="h3Sponsoren">Unsere Hauptsponsoren</h3>
                 <h3>Unser TV</h3>
                 <h3>Unsere Social Medias</h3>
                 <a href="https://gimalur.ch/"><img src="../picture/Gimalur.png" alt="Button zum Sponsor gimalur" class="GimalurButton"></a>
