--- a/ProjektHCMSeite/Herren1/herren1.html
+++ b/ProjektHCMSeite/Herren1/herren1.html
@@ -59,18 +59,11 @@
         </nav>
         <div class="containerMain">
             <header>
-                <div class="socials">
-                    <a href="https://www.instagram.com/hcmalters/">
-                        <img src="Download.png" alt="Instagram Link zu HC Malters"> </a>
-
-                    <a href="https://www.facebook.com/hcmalters/">
-                        <img src="facebook--v1.png" alt="Link zum Facebook des HC Malters">
-                    </a>
-                </div>
-
+                
+                <h1>Herren 1</h1>
             </header>
             <main>
-                <h1>Herren 1</h1>
+                
                 <h3>2. Liga</h2>
 
                     <img class="bild_herren1" src="https://www.hc-malters.ch/images/teams/2022/H1.jpg"
@@ -127,7 +120,7 @@
     </div>
     <footer>
         <div class="containerFooter">
-            <h3 class="h3Sponsoren">Unsere Sponsoren</h3>
+            <h3 class="h3Sponsoren">Unsere Hauptsponsoren</h3>
             <h3>Unser TV</h3>
             <h3>Unsere Social Medias</h3>
             <a href="https://gimalur.ch/"><img src="../picture/Gimalur.png" alt="Button zum Sponsor gimalur" class="GimalurButton"></a>
