Alles hat jetzt ein footer/header

--- a/ProjektHCMSeite/Herren1/herren1.html
+++ b/ProjektHCMSeite/Herren1/herren1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../hauptSeite/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="herren1.css" rel="stylesheet">
+    <link rel="icon" href="../picture/HCM_Logo_blau_2019.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;1,500&family=Nabla&display=swap"
@@ -34,8 +35,8 @@
             </Header>
             <nav class="mainNav">
                 <a href="../Herren1/herren1.html"><button class="sideBarButton">Teams</button></a>
-                <a href="../Herren1/herren1.html"><button class="sideBarButton">Mitglied werden</button></a>
-                <a href="../Herren1/herren1.html"><button class="sideBarButton">Portrait</button></a>
+                <a href="../MitgliedWerden/mitgliedwerden.html"><button class="sideBarButton">Mitglied werden</button></a> 
+                <a href="../Portrait/portrait.html"><button class="sideBarButton">Portrait</button></a> 
 
             </nav>
         </div>
